--- a/system/main/ansible.cfg
+++ b/system/main/ansible.cfg
@@ -1,3 +1,9 @@
-# disable SSH authenticity checking
 [defaults]
+# disable SSH 'authenticity of host' checking
+# https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-pipelining
 host_key_checking = False
+
+[ssh_connection]
+# faster ansible run, as ssh connects multiple times
+# https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-pipelining
+pipelining = True
