--- a/system/main/ansible.cfg
+++ b/system/main/ansible.cfg
@@ -3,6 +3,9 @@
 # https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-pipelining
 host_key_checking = False
 
+# https://docs.ansible.com/ansible/latest/reference_appendices/interpreter_discovery.html#interpreter-discovery
+interpreter_python = /usr/bin/python
+
 [ssh_connection]
 # faster ansible run, as ssh connects multiple times
 # https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-pipelining
