--- a/system/main/playbooks/roles/packages/tasks/main.yml
+++ b/system/main/playbooks/roles/packages/tasks/main.yml
@@ -25,8 +25,7 @@
 
 - name: Install command-line utilities
   block:
-    - name: Pacman
-      pacman:
+    - pacman:
         name:
           - community/fzf  # https://github.com/junegunn/fzf
           - community/ripgrep  # https://github.com/BurntSushi/ripgrep
@@ -42,8 +41,7 @@
         state: present
       become: true
 
-    - name: Pip
-      pip:
+    - pip:
         name:
           - git-substatus  # https://github.com/strboul/git-substatus
           - pre-commit  # https://pre-commit.com/#installation
