--- a/system/main/main.yml
+++ b/system/main/main.yml
@@ -3,6 +3,7 @@
   gather_facts: true
 
 - import_playbook: playbooks/base/main.yml
+- import_playbook: playbooks/ntp/main.yml
 - import_playbook: playbooks/bluetooth/main.yml
 - import_playbook: playbooks/packages/main.yml
 - import_playbook: playbooks/languages/main.yml
