--- a/system/main/playbooks/base/fonts.yml
+++ b/system/main/playbooks/base/fonts.yml
@@ -1,7 +1,14 @@
 ---
+# https://www.gnu.org/software/freefont/
+- name: Install GNU Free Fonts
+  pacman:
+    name: extra/gnu-free-fonts
+    state: present
+  become: true
+
 # https://www.jetbrains.com/lp/mono/
 # https://www.nerdfonts.com/font-downloads
-- name: JetBrains Mono Nerd Fonts
+- name: Install JetBrains Mono Nerd Fonts
   kewlfft.aur.aur:
     use: yay
     name: nerd-fonts-jetbrains-mono
