--- a/system/main/main.yml
+++ b/system/main/main.yml
@@ -1,10 +1,18 @@
+---
 - name: Main
   hosts: all
   gather_facts: true
 
+# --- base
 - import_playbook: playbooks/base/main.yml
 - import_playbook: playbooks/ntp/main.yml
+# --- bluetooth
 - import_playbook: playbooks/bluetooth/main.yml
+# --- packages
 - import_playbook: playbooks/packages/main.yml
+# --- languages
 - import_playbook: playbooks/languages/main.yml
+# --- gui
 - import_playbook: playbooks/gui/main.yml
+# --- virtualization
+- import_playbook: playbooks/virt/main.yml
