--- a/system/main/playbooks/base/main.yml
+++ b/system/main/playbooks/base/main.yml
@@ -1,43 +1,64 @@
+---
 - name: Base
   hosts: all
+  tags: base
   vars:
+    yay_command: /usr/bin/yay
     workbench_dir: /opt/workbench
     yay_install_dir: "{{ workbench_dir }}/yay"
-    yay_command: /usr/bin/yay
+    pacman_updated_file: "{{ workbench_dir }}/.ansible_pacman_updated"
   tasks:
     - name: Have a workbench folder belonging to user
       file:
         path: "{{ workbench_dir }}"
+        # equivalent of `sudo chown -R $USER:$USER <path>`
         owner: "{{ ansible_env.USER }}"
         group: "{{ ansible_env.USER }}"
         mode: 0700
         state: directory
       become: true
+      register: workbench_folder
 
-    - name: Run pacman -Syu to update the system
-      pacman:
-        update_cache: true
-        upgrade: true
-      become: true
-      # don't hammer arch servers
-      throttle: 1
+    # Create a dummy file to check if system is updated via Ansible in the
+    # beginning. This is because I don't want to update the system via Ansible
+    # at the subsequent runs, but I control this process myself. I don't know
+    # if there's a better way of doing it.
+    - name: Update the system
+      block:
+        - name: Check file for pacman updated
+          stat:
+            path: "{{ pacman_updated_file }}"
+          register: pacman_system_updated_status
+
+        - name: pacman -Syu to update the system
+          pacman:
+            update_cache: true
+            upgrade: true
+          become: true
+          # don't hammer arch servers
+          throttle: 1
+          when: not pacman_system_updated_status.stat.exists
+          register: pacman_system_updated
+
+        - name: Create file for pacman updated
+          copy:
+            dest: "{{ pacman_updated_file }}"
+            content: "{{ lookup('pipe', 'date') }}\n"  # add timestamp info inside
+            mode: 0644
+          when: pacman_system_updated.changed
 
     - name: Install yay
       import_tasks: yay.yml
-      tags: base__yay
+      tags: base.yay
+
+    - name: Essential packages
+      import_tasks: essential.yml
+      tags: base.essential
 
     - name: Setup fonts
       import_tasks: fonts.yml
-      tags: base__fonts
+      tags: base.fonts
 
-    - name: Other essential packages
-      pacman:
-        name:
-          - core/curl
-          - extra/wget
-          - extra/vim
-          - extra/tree
-          - extra/lsof
-          - extra/python-pip
-        state: present
-      become: true
+    - name: Network tools
+      import_tasks: network.yml
+      tags: base.network
