--- a/system/main/playbooks/gui/main.yml
+++ b/system/main/playbooks/gui/main.yml
@@ -1,89 +1,90 @@
+---
 - name: GUI
   hosts: all
+  tags: gui
   tasks:
     - name: Install alacritty terminal  # https://github.com/alacritty/alacritty
       pacman: name=community/alacritty state=present
       become: true
-      tags: gui__alacritty
+      tags: gui.alacritty
 
     - name: Install meld
       pacman: name=extra/meld  # https://meldmerge.org state=present
       become: true
-      tags: gui__meld
+      tags: gui.meld
 
     - name: Install flameshot  # https://github.com/flameshot-org/flameshot
       pacman: name=community/flameshot state=present
       become: true
-      tags: gui__flameshot
+      tags: gui.flameshot
 
     - name: Install gedit
       pacman: name=extra/gedit state=present
       become: true
-      tags:
-        - gui__gedit
+      tags: gui.gedit
 
     - name: Install Chromium
       pacman: name=extra/chromium state=present
       become: true
-      tags: gui__chromium
+      tags: gui.chromium
 
     - name: Install Chrome
       kewlfft.aur.aur:
         use: yay
         name: google-chrome
         state: present
-      tags: gui__chrome
+      tags: gui.chrome
 
     - name: Install Firefox
       pacman: name=extra/firefox state=present
       become: true
-      tags: gui__firefox
+      tags: gui.firefox
 
     - name: Install Brave  # https://brave.com
       kewlfft.aur.aur:
         use: yay
         name: brave-bin
         state: present
-      tags: gui__brave
+      tags: gui.brave
 
     - name: Install vscode
       pacman: name=community/code state=present
       become: true
-      tags: gui__vscode
+      tags: gui.vscode
 
     - name: Install LibreOffice
       pacman: name=extra/libreoffice-fresh state=present
       become: true
-      tags: gui__libreoffice
+      tags: gui.libreoffice
 
     - name: Install Slack desktop
       kewlfft.aur.aur:
         use: yay
         name: slack-desktop
         state: present
-      tags: gui__slack
+      tags: gui.slack
 
     - name: Install DBeaver  # https://dbeaver.io/
       pacman: name=community/dbeaver state=present
       become: true
-      tags: gui__dbeaver
+      tags: gui.dbeaver
 
     - name: Install RStudio  # https://www.rstudio.com/
       kewlfft.aur.aur:
         use: yay
         name: rstudio-desktop-bin
         state: present
-      tags: gui__rstudio
+      tags: gui.rstudio
 
     - name: Install Signal
       pacman: name=community/signal-desktop state=present
       become: true
-      tags: gui__signal
+      tags: gui.signal
 
     - name: Install Telegram
       pacman: name=community/telegram-desktop state=present
       become: true
-      tags: gui__telegram
+      tags: gui.telegram
 
     - name: Install Wireshark  # https://www.wireshark.org/
       pacman:
@@ -92,40 +93,36 @@
           - community/wireshark-qt
         state: present
       become: true
-      tags: gui__wireshark
+      tags: gui.wireshark
 
     - name: Install VLC
       pacman: name=extra/vlc state=present
       become: true
-      tags: gui__vlc
+      tags: gui.vlc
 
     - name: Install keepassxc  # https://keepassxc.org/
       pacman: name=community/keepassxc state=present
       become: true
-      tags: gui__keepassxc
+      tags: gui.keepassxc
 
     - name: Install gThumb  # https://wiki.gnome.org/Apps/Gthumb
       pacman: name=extra/gthumb state=present
       become: true
-      tags: gui__gthumb
+      tags: gui.gthumb
 
     - name: Install xcolor  # https://github.com/Soft/xcolor
       pacman: name=community/xcolor state=present
       become: true
-      tags: gui__xcolor
+      tags: gui.xcolor
 
     - name: Install magicavoxel  # https://ephtracy.github.io/
       kewlfft.aur.aur:
         use: yay
         name: magicavoxel
         state: present
-      tags: gui__magicavoxel
-
-    - name: Install virtualization
-      import_tasks: virtualization.yml
-      tags: gui__virtualization
+      tags: gui.magicavoxel
 
     - name: Install gnome-disk-utility
       pacman: name=extra/gnome-disk-utility state=present
       become: true
-      tags: gui__gnome_disk_utility
+      tags: gui.gnome_disk_utility
