--- a/system/main/playbooks/packages/pip.yml
+++ b/system/main/playbooks/packages/pip.yml
@@ -7,6 +7,7 @@
       - bpython  # https://github.com/bpython/bpython
       - pdbpp  # https://github.com/pdbpp/pdbpp (drop-in replacement for pdb)
     state: present
+  tags: packages.pip.python_tools
 
 - name: Data science tools
   pip:
@@ -14,11 +15,13 @@
       - jupyter
       - radian  # https://github.com/randy3k/radian
     state: present
+  tags: packages.pip.ds_tools
 
-- name: Other
+- name: Other tools
   pip:
     name:
       - tmuxp  # https://github.com/tmux-python/tmuxp
       - youtube-dl  # https://github.com/ytdl-org/youtube-dl
       - visidata  # https://www.visidata.org/
     state: present
+  tags: packages.pip.other_tools
