--- a/system/main/playbooks/ntp/main.yml
+++ b/system/main/playbooks/ntp/main.yml
@@ -1,4 +1,5 @@
-- name: NTP  # https://wiki.archlinux.org/title/Network_Time_Protocol_daemon
+# https://wiki.archlinux.org/title/Network_Time_Protocol_daemon
+- name: NTP
   hosts: all
   tags: ntp
   tasks:
