--- a/system/main/main.yml
+++ b/system/main/main.yml
@@ -8,10 +8,10 @@
 - import_playbook: playbooks/ntp/main.yml
 # --- bluetooth
 - import_playbook: playbooks/bluetooth/main.yml
-# --- packages
-- import_playbook: playbooks/packages/main.yml
-# --- languages
-- import_playbook: playbooks/languages/main.yml
+# --- package
+- import_playbook: playbooks/package/main.yml
+# --- language
+- import_playbook: playbooks/language/main.yml
 # --- gui
 - import_playbook: playbooks/gui/main.yml
 # --- virtualization
