--- a/system/core/arch/archinstall/config.json
+++ b/system/core/arch/archinstall/config.json
@@ -1,21 +1,15 @@
 {
+  "script": "guided",
   "audio": "pipewire",
-  "bootloader": "grub-install",
-  "hostname": "archpad",
+  "filesystem": "btrfs",
   "gfx_driver": "All open-source (default)",
-  "kernels": [
-    "linux"
-  ],
+  "kernels": ["linux"],
   "keyboard-layout": "us",
   "nic": {
     "NetworkManager": true
   },
   "ntp": true,
-  "packages": [
-    "git",
-    "base-devel"
-  ],
-  "script": "guided",
+  "packages": ["git", "base-devel"],
   "swap": true,
   "sys-encoding": "utf-8",
   "sys-language": "en_US",
