--- a/system/main/playbooks/gui/main.yml
+++ b/system/main/playbooks/gui/main.yml
@@ -4,32 +4,15 @@
   tags: gui
   tasks:
     # https://github.com/alacritty/alacritty
-    - name: Install alacritty terminal
+    - name: Install Alacritty terminal
       pacman: name=community/alacritty state=present
       become: true
       tags: gui.alacritty
-
-    # https://meldmerge.org
-    - name: Install meld
-      pacman: name=extra/meld state=present
-      become: true
-      tags: gui.meld
-
-    # https://github.com/flameshot-org/flameshot
-    - name: Install flameshot
-      pacman: name=community/flameshot state=present
-      become: true
-      tags: gui.flameshot
 
     - name: Install gedit
       pacman: name=extra/gedit state=present
       become: true
       tags: gui.gedit
-
-    - name: Install Chromium
-      pacman: name=extra/chromium state=present
-      become: true
-      tags: gui.chromium
 
     - name: Install Chrome
       kewlfft.aur.aur:
@@ -37,6 +20,11 @@
         name: google-chrome
         state: present
       tags: gui.chrome
+
+    - name: Install Chromium
+      pacman: name=extra/chromium state=present
+      become: true
+      tags: gui.chromium
 
     - name: Install Firefox
       pacman: name=extra/firefox state=present
@@ -51,14 +39,18 @@
         state: present
       tags: gui.brave
 
-    # https://wiki.archlinux.org/title/Visual_Studio_Code
-    - name: Install vscode
-      kewlfft.aur.aur:
-        use: yay
-        name: visual-studio-code-bin
-        state: present
+    # https://github.com/flameshot-org/flameshot
+    - name: Install flameshot
+      pacman: name=community/flameshot state=present
       become: true
-      tags: gui.vscode
+      tags: gui.flameshot
+
+    # https://dbeaver.io/
+    - name: Install DBeaver
+      pacman: name=community/dbeaver state=present
+      become: true
+      tags: gui.dbeaver
+
 
     - name: Install LibreOffice
       pacman: name=extra/libreoffice-fresh state=present
@@ -71,12 +63,6 @@
         name: slack-desktop
         state: present
       tags: gui.slack
-
-    # https://dbeaver.io/
-    - name: Install DBeaver
-      pacman: name=community/dbeaver state=present
-      become: true
-      tags: gui.dbeaver
 
     # https://www.rstudio.com/
     - name: Install RStudio
@@ -149,3 +135,35 @@
       pacman: name=extra/gnome-disk-utility state=present
       become: true
       tags: gui.gnome_disk_utility
+
+    # https://meldmerge.org
+    - name: Install meld
+      pacman: name=extra/meld state=present
+      become: true
+      tags: gui.meld
+
+    # https://www.vagrantup.com/
+    - name: Install vagrant
+      pacman: name=community/vagrant state=present
+      become: true
+      tags: gui.vagrant
+
+    # https://www.virtualbox.org/
+    - name: Install VirtualBox
+      pacman:
+        name:
+          - community/virtualbox
+          - community/virtualbox-guest-utils
+        state: present
+      become: true
+      tags: gui.virtualbox
+
+    - name: Install gnome-boxes
+      pacman:
+        name:
+          - community/libvirt
+          - community/gnome-boxes
+          - community/virt-manager
+        state: present
+      become: true
+      tags: gui.gnome_boxes
